# openapi/devices-api.yml
@@ -57,6 +57,11 @@ paths:
           required: false
           schema:
             $ref: '#/components/schemas/DeviceState'
+        - name: brand
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: Paginated devices
